--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+</div><!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -473,7 +473,7 @@
                 <tr>
                     <td class="row-header">Возможности</td>
                     <td class="stage-cell">
-                        <div class="opportunity-text">Готовые подборки по типовым проектам</div>
+                        <div class="opportunity-text">Отгрузка в день оплаты + 100 000+ товаров на складе</div>
                     </td>
                     <td class="stage-cell">
                         <div class="opportunity-text">SEO-контент, справочники по подбору, калькуляторы замены</div>
@@ -482,16 +482,16 @@
                         <div class="opportunity-text">Подбор по параметрам, фильтры "аналогов и замен"</div>
                     </td>
                     <td class="stage-cell">
-                        <div class="opportunity-text">Быстрая генерация КП, сопровождение проектного отдела</div>
+                        <div class="opportunity-text">Персональный менеджер + подбор даже при неполном ТЗ</div>
                     </td>
                     <td class="stage-cell">
-                        <div class="opportunity-text">Онлайн-оплата, электронный документооборот</div>
+                        <div class="opportunity-text">Отсрочка платежа по договору + цены ниже на 10-15%</div>
                     </td>
                     <td class="stage-cell">
-                        <div class="opportunity-text">СМС-уведомления, трекинг поставки, фотоотчет по сборке</div>
+                        <div class="opportunity-text">Бесплатная доставка до ТК + 90% заказов по Москве своим транспортом</div>
                     </td>
                     <td class="stage-cell">
-                        <div class="opportunity-text">Видео-инструкции, телефонная техподдержка монтажников</div>
+                        <div class="opportunity-text">Предпродажные испытания на стендах + среднее время ответа 2 часа</div>
                     </td>
                     <td class="stage-cell">
                         <div class="opportunity-text">Программа продленного сервисного сопровождения</div>
@@ -578,28 +578,36 @@
         <h2>💪 Reasons to Believe - Ключевые преимущества DN.ru</h2>
         <div class="rtb-grid">
             <div class="rtb-item">
-                <h4>🔍 12-ступенчатый контроль качества</h4>
-                <p>Минимальные риски брака</p>
+                <h4>📦 Отгрузка в день оплаты</h4>
+                <p>При заказе до 12:00, при наличии на складе</p>
             </div>
             <div class="rtb-item">
-                <h4>🔄 Подбор аналогов</h4>
-                <p>Под все основные проектные спецификации</p>
+                <h4>🚚 Бесплатная доставка до ТК</h4>
+                <p>В Москве, без условий по сумме</p>
             </div>
             <div class="rtb-item">
-                <h4>📜 Полная сертификация</h4>
-                <p>Сертификаты на все виды продукции</p>
+                <h4>🗃 100 000+ товаров на складе</h4>
+                <p>С ежедневным обновлением, 85% в наличии</p>
             </div>
             <div class="rtb-item">
-                <h4>📦 Складские остатки</h4>
-                <p>Большая часть позиций на складе</p>
+                <h4>👨‍💼 Персональный менеджер</h4>
+                <p>Сопровождает от заявки до поставки</p>
             </div>
             <div class="rtb-item">
-                <h4>👨‍💼 Техподдержка инженеров</h4>
-                <p>Помощь в подборе оборудования</p>
+                <h4>🛠 Подбор оборудования</h4>
+                <p>Даже при неполном ТЗ + альтернативные решения</p>
             </div>
             <div class="rtb-item">
-                <h4>📄 Простой документооборот</h4>
-                <p>Онлайн-контракты, электронные счет-фактуры</p>
+                <h4>💸 Цены на 10-15% ниже рынка</h4>
+                <p>За счет собственного бренда и логистики</p>
+            </div>
+            <div class="rtb-item">
+                <h4>📜 Вся продукция сертифицирована</h4>
+                <p>По стандартам РФ, мы — производитель марки DN.ru</p>
+            </div>
+            <div class="rtb-item">
+                <h4>⭐️ Рейтинг 4.9 из 5</h4>
+                <p>На Яндекс.Бизнес, более 10 000 клиентов с 2018 года</p>
             </div>
         </div>
     </div>
@@ -634,21 +642,15 @@
         </div>
     </div>
 
-    <div style="background: #fff; padding: 20px; margin-top: 20px; border-left: 4px solid #e74c3c;">
-        <h3 style="color: #e74c3c; margin-bottom: 15px;">🔥 Критические моменты CRM и квалификации</h3>
-        <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px;">
-            <div>
-                <strong>Квалификация:</strong><br>
-                Объект/нет объекта → стадия закупки → срок поставки
-            </div>
-            <div>
-                <strong>Скорость реакции:</strong><br>
-                Отклик менеджера в течение 15–30 минут
-            </div>
-            <div>
-                <strong>Эскалация:</strong><br>
-                Подключение проектного отдела при нестандартных позициях
-            </div>
+    <div style="background: #fff; padding: 20px; margin-top: 20px; border-left: 4px solid #2c3e50;">
+        <h3 style="color: #2c3e50; margin-bottom: 15px;">🏢 Дополнительные RTB DN.ru</h3>
+        <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 15px; font-size: 0.9rem;">
+            <div>✅ <strong>Склад в Москве — 3000 м²</strong><br>Можно приехать или посмотреть по видеосвязи</div>
+            <div>📈 <strong>Более 2000 отгрузок ежемесячно</strong><br>Данные учётной системы</div>
+            <div>🤝 <strong>Официальные дилеры ведущих брендов</strong><br>Партнёрства с производителями</div>
+            <div>🛒 <strong>Наши товары на Леруа Мерлен</strong><br>И ВсеИнструменты.ру</div>
+            <div>🗺 <strong>Поставляем по всей России и СНГ</strong><br>Казахстан, Беларусь, Киргизия</div>
+            <div>🏆 <strong>Один из самых узнаваемых порталов</strong><br>По промышленному оборудованию в РФ</div>
         </div>
     </div>
 
